enum enumOne
{
    option optionOne = true;
    empty = 0;
    full = 1;
}
