message messageOne
{
    oneof choicesOne
    {
        option optionOne = true;
        string sOne = 1;
    }
}
